update description, fix typo

--- a/.verb.md
+++ b/.verb.md
@@ -20,7 +20,7 @@ console.log(not('foo'));
 
 **Strict matching**
 
-By default, the returned regex is for strictly (not) matching the exact given pattern (in other words, "match this string if it dot NOT _exactly equal_ `foo`"):
+By default, the returned regex is for strictly (not) matching the exact given pattern (in other words, "match this string if it does NOT _exactly equal_ `foo`"):
 
 ```js
 var re = not('foo');
