--- a/.verb.md
+++ b/.verb.md
@@ -15,7 +15,7 @@ not(string[, options]);
 ```js
 var not = require('regex-not');
 console.log(not('foo'));
-//=> /^(?:(?!^(?:foo)$).)*$/
+//=> /^(?:(?!^(?:foo)$).)+$/
 ```
 
 **Strict matching**
@@ -32,11 +32,11 @@ console.log(re.test('barfoo'));  //=> true
 
 ### .create
 
-Get a string, so you can create your own regex:
+Returns a string to allow you to create your own regex:
 
 ```js
 console.log(not.create('foo'));
-//=> '(?:(?!^(?:foo)$).)*'
+//=> '(?:(?!^(?:foo)$).)+'
 ```
 
 ### Options
